visibility fix
contact section title visibility

--- a/app/sass/partials/contact-footer.sass
+++ b/app/sass/partials/contact-footer.sass
@@ -79,8 +79,6 @@
 			margin: 0 30px 0 0
 		.contact-info
 			margin: 0
-			p 
-				display: none
 
 @media only screen and (max-width: 767px)
 	.contact
@@ -94,7 +92,9 @@
 			margin: 30px -5%
 			max-width: initial
 			width: 110%
-
+		.contact-info
+			p 
+				display: none
 		.address
 			margin: 20px 0 0 0
 		.contact-socials
